force-app/main/default/objects/ssot__AbnExperimentCohort__dlm/fields/ssot__AbnExperimentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AbnExperimentId__c</fullName>
    <label>Experiment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AbnExperimentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>