force-app/main/default/objects/ssot__AbnExperimentCohort__dlm/fields/ssot__AllocationWeight__c.field-meta.xml
<CustomField>
    <fullName>ssot__AllocationWeight__c</fullName>
    <label>Allocation Weight</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AllocationWeight</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>