force-app/main/default/objects/ssot__AbnExperimentCohort__dlm/fields/ssot__IsControl__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsControl__c</fullName>
    <label>Is Control</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsControl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>